--- a/form1.html
+++ b/form1.html
@@ -1,1 +1,43 @@
+<html>
+    <head>
+    <title>CURRICULUM VITAE</title>
 
+    </head>
+    <body>
+    <h1 align=center>CURRICULUM VITAE</h1>
+    <!--INFORMASI DATA DIRI-->
+        <hr>
+        <b>PERSONAL INFORMATION</b>
+        <hr>
+        <table style="width:50%">
+            <!--FOTO-->
+            <img src="cv_efa.jpg/IMG_20210317_145436_224.jpg" align="right" width="104" height="142">
+        <tr>
+        <th></th>
+        <th></th>
+        </tr>
+        <tr>
+            <td>Nama Lengkap</td>
+            <td>: Efa kumala dewi</td>
+        </tr>
+        <tr>
+            <td>Tempat Tanggal Lahir</td>
+            <td>: selanglet 30 desember 2002 </td>  
+        </tr>
+            <td>Alamat</td>
+            <td>: penujak</td>
+        <tr>
+            <td>Status</td>
+            <td>: Mahasiswa</td>
+        </tr>
+            <tr>
+            <td>NO HP</td>
+            <td>: 081*********</td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td>: efakumaladewiefa@gmail.com</td>
+        </tr>
+        </table>
+    </body>
+    </html>
