--- a/hasil.html
+++ b/hasil.html
@@ -1,1 +1,36 @@
+<div class="container">
+    <!-- Column -->
+    <div class="container__column">
+        <!-- Cover -->
+        ...
 
+        <!-- Content -->
+        <div class="container__content">
+            ...
+        </div>
+
+        <!-- Button sticks to the bottom -->
+        ...
+    </div>
+
+    <!-- Repeat with other columns -->
+    ...
+</div>
+.container {
+                        display: flex;
+                    }
+
+                    .container__column {
+                        flex: 1;
+                        /* Space between columns */
+                        margin: 0 8px;
+
+                        /* Layout each column */
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    .container__content {
+                        /* Take available height */
+                        flex: 1;
+                    }
