--- a/cv.html
+++ b/cv.html
@@ -7,32 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    </body>
-    </html>
-    <hr>
-    <h1>
-        Data diri
-    </h1>
+    <hr />
     <header style="text-align: center;">
-    <img src="cv_efa.jpg/cv_ekd.jpg" width="300" height="200"
+    <img src="index.html" width="200" height="200"
 style="border-radius: 50%;"/>
 <h1>Efa Kumala Dewi</h1>
 <p>(web Developer)</p> 
-    </header>
-    <h2>Riwayat Pendidikan</h2>
-    <p>perkuliahan tinggi manajemen informatika STIMK lombok, 
-        status mahasiswa jurusan Sisitem Informasi
-    </p>
-    <p>pernah menempuh pendidikan di pondok pesantren assunnah jurang jaler waktu SMA selama 3 tahun</p>
 
-    <hr />
-</table>
-<h2>Media Sosial</h2>
-<ul>
-    <li><a href="https://www.facebook.com" target="_balk">facebook</a></li>
-    <li><a href="#">Instagram</a></li>
-    <li><a href="#">whatshapp</a></li>
-    <li><a href="#">Tiktok</a></li>
-</ul>
+    <h2>Riwayat pendidikan</h2>
+    <p>pernah menempuh jenjang pendidikan SMA di pondok pesantren
+        ASSUNNAH jurang jaler selama 3 tahun
+    </p>
+    <p>
+        dan sekarang menempuhjenjang pendidkan sebagai mahasiswi di STIMK LOMBOK
+    </p>
+
+    <h2>Media Sosial</h2>
+    <ul>
+        <li><a href="https://www.facebook.com" target="_balk">facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">whatshapp</a></li>
+        <li><a href="#">Tiktok</a></li>
+    </ul>
 </body>
 </html>
