--- a/form2.html
+++ b/form2.html
@@ -7,68 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-     <!--RIWAYAT PENDIDIKAN FORMAL-->  
-     <hr>
-     <b>PENDIDIKAN FORMAL</b>
-     <hr>
-         <table style="width:80%">
-     <tr>
-     <th></th>
-     <th></th>
-     </tr>
-     <tr>
-         <td>2018-2020</td>
-         <td>MA Assunnah jurang jaler</td>
-     </tr>
-     <tr>
-         <td>2015-2017</td>
-         <td>MTS-sa mikrajussibyan nw selanglet</td>  
-     </tr>
-         <td>2008-2014</td>
-         <td>MI mikrajussibyan nw selanglet</td>
-     <tr>
-     </tr>
-     </table>
-<!--RIWAYAT PENDIDIKAN INFORMAL-->      
-             <hr>
-             <b>PENDIDIKAN INFORMAL</b>
-             <hr>
-                 <table style="width:110%">
-             <tr>
-             <th></th>
-             <th></th>
-             </tr>
-             <tr>
-                 <td>2015-2017</td>
-                 <td>ngaji diniah pagi dan sore</td>
-             </tr>
-             <tr>
-                 <td>2018-2020</td>
-                 <td>kuliah subuh, ngaji sore dan ngaji malam</td>  
-             </tr>
-             </table>
-<!-- RIWAYAT ORGANISASI-->
-                     <hr>
-                     <b>ORGANISASI</b><hr>
-                     <table style="width:180%">
-                 <tr>
-                 <th></th>
-                 <th></th>
-                 </tr>
-                 <tr>
-                     <td>2017</td>
-                     <td>bendahara pramuka/td>
-                 </tr>
-                 <tr>
-                     <td>2017</td>
-                     <td>pengurus cabang pondok pesantren</td>  
-                 </tr>
-                 </table>
-<!--KEAHLIAN YANG DIMILIKI-->                  
-                     <hr>
-                     <b>KEAHLIAN</b><hr>
-                 Mengoperasikan Komputer : Microsoft Office<br>
-                 Desain Grafis: CorelDRAW & Adobe Ilustrator<br>
-<a href="form1.html">KEMBALI KE INDEKS</a><br>
+    <h1>Riwayat Pendidikan</h1>
+</table>
+<ul>
+<li>Dari Tahun 2008-2022</li>
+<br/>
+<table border="1" cellpadding="1" cellspacing="1.5" width="450">
+<tr>
+
+    <td><b>Tingkatan Pendidikan</b></td>
+<td><b>LULUS</b></td>
+</tr>
+<tr>
+
+    <td>MI Mikrajussibyan nw selanglet</td>
+<td>2013</td>
+</tr>
+<tr>
+
+    <td>MTS-SA Mikrajussibyan</td>
+<td>2016</td>
+</tr>
+<tr>
+
+    <td>MA Asunnah jurang jaler</td>
+<td>2020</td>
+</tr>
+<tr>
+
+    <td>STIMK LOMBOK</td>
+<td>Masih dalam perkuliahan</td>
+</tr>
+</table>
 </body>
 </html>
